# Todoster

./: .gitignore  Cargo.toml  LICENSE  README.md  pcode.txt  todos.ron
.github/workflows/: release.yaml
src/: ___todos.ron  lib.rs  main.rs  todos.ron
tests/: core_rests.rs
