[package]
name = "todo_ron_cli"
version = "0.1.0"
description = "A lightweight RON-backed command-line to-do manager"
authors = ["Christopher Hall"]
license = "MIT"
repository = "https://github.com/UKWolfy/todoist"
homepage = "https://github.com/UKWolfy/todoist"
readme = "README.md"
keywords = ["todo", "cli", "rust", "ron"]
categories = ["command-line-utilities", "productivity"]

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[bin]]
name = "todo"
path = "src/main.rs"
